arregle un linkeo en los archivos ejercicios.html y arma_rutina.html

--- a/Proyecto TP/frontend/html/ejercicios.html
+++ b/Proyecto TP/frontend/html/ejercicios.html
@@ -17,7 +17,7 @@
                 <nav class="container-contenido-header" aria-label="Navegación principal">
                     <ul class="nav_list" id="nav-list">
                         <li>
-                            <button class="txt-home" href="index.html"><a>Inicio</a></button>
+                            <a class="txt-home" href="index.html">Inicio</a>
                         </li>
                         <li class="nav-link">
                             <a class="txt-home" href="quienes_somos.html">Quienes Somos</a>
