agrege un estilo para que el texto en las tablas se mantenga en la misma linea

--- a/Proyecto TP/frontend/html/ejercicios.html
+++ b/Proyecto TP/frontend/html/ejercicios.html
@@ -48,7 +48,7 @@
                                 <th>Repeticiones</th>
                                 <th>Peso</th>
                                 <th>Rir</th>
-                                <th>Tiempo de descanso</th>
+                                <th>Tiempo de Descanso</th>
                                 <th>Descripcion</th>
                                 <th>Editar</th>
                                 <th>Borrar</th>
@@ -127,6 +127,7 @@
     
             const NewBorrar = document.createElement("td"); // Borrar
             const BorrarLink = document.createElement("a");
+
             BorrarLink.className = "button";
             BorrarLink.innerHTML = "Borrar";
             BorrarLink.href = "#";
