Ya se puede usar boton de borrar ejercicios, lo que si nosotros usamos el mismo id de un ejercicio en otro entrenamiento, entonces si borro el ejercicio en un dia que se vuelve a repetir el mismo ejercicio en otro dia, se termina borrando en los dos dias, hay que solucionar eso y ademas cambie el titulo para cuando entra a un entrenamiento diga el dia del entrenamiento como titulo pero tambien hay un error que hace que se corra la tabla de lugar por el largo del titulo, se resuelve con el css pero hay que solucionar eso tambien

--- a/Proyecto TP/frontend/html/arma_rutina.html
+++ b/Proyecto TP/frontend/html/arma_rutina.html
@@ -113,7 +113,7 @@
                     const BorrarLink = document.createElement("a");
                     BorrarLink.className = "button";
                     BorrarLink.innerHTML = "Borrar";
-                    BorrarLink.onclick = function(){deleteEntrenamiento(Entrenamiento.id)}
+                    BorrarLink.onclick = function(){deleteEntrenamiento(Entrenamiento.id)};
                     NewBorrar.appendChild(BorrarLink);
                     newRow.appendChild(NewBorrar);
 
