--- a/Proyecto TP/frontend/html/ejercicios.html
+++ b/Proyecto TP/frontend/html/ejercicios.html
@@ -135,7 +135,7 @@
                 BorrarLink.className = "button";
                 BorrarLink.innerHTML = "Borrar";
                 BorrarLink.href = "#";
-                BorrarLink.onclick = function(event){deleteEjercicio(ej.id)};
+                BorrarLink.onclick = function(){deleteEjercicio(ej.id)};
                 NewBorrar.appendChild(BorrarLink);
                 newRow.appendChild(NewBorrar);
 
