Hice cambios minimos en algunos codigos

--- a/Proyecto TP/frontend/html/ejercicios.html
+++ b/Proyecto TP/frontend/html/ejercicios.html
@@ -48,7 +48,7 @@
                                 <th>Series</th>
                                 <th>Repeticiones</th>
                                 <th>Peso (kg)</th>
-                                <th>Rir</th>
+                                <th>RIR</th>
                                 <th>Tiempo de Descanso (minutos)</th>
                                 <th>Descripcion</th>
                                 <th>Editar</th>
@@ -186,7 +186,7 @@
                 modal.close();
                 formEj.reset();
                 tablaEjercicios(); // recarga la tabla
-                alert("Ejercicio agregado");
+                alert("Ejercicio agregado correctamente");
             } else {
                 alert("Error al agregar el ejercicio");
             }
