--- a/Proyecto TP/frontend/html/arma_rutina.html
+++ b/Proyecto TP/frontend/html/arma_rutina.html
@@ -153,7 +153,7 @@
                 if(respuesta.ok) {
                     cerrarModal();
                     tablaEntrenos();
-                    alert("Entrenamiento agregado");
+                    alert("Entrenamiento agregado correctamente");
                 } else {
                     alert("Error al agregar el entrenamiento");
                 }
