Ya hice toda la parte del frontend de alimentacion

--- a/Proyecto TP/frontend/html/index.html
+++ b/Proyecto TP/frontend/html/index.html
@@ -82,7 +82,7 @@
                     <div class="tarjeta-info" >
                         <p class="tarjeta-info-text">Comé de forma inteligente y alineá tu alimentación con tus objetivos físicos y de salud.
                         ¡La constancia en la dieta es clave para transformar tu cuerpo!</p>
-                        <button class="tarjeta-info-btn">SEGUI TU DIETA</button>
+                        <button class="tarjeta-info-btn" onclick="window.location.href='rutinas_alimentacion.html'">SEGUI TU DIETA</button>
                     </div>
             </section>
         </main>
