--- a/Proyecto TP/frontend/html/rutinas_alimentacion.html
+++ b/Proyecto TP/frontend/html/rutinas_alimentacion.html
@@ -53,7 +53,7 @@
                         tu alimentación en base a tus objetivos. Arranca ahora!
                     </p>
                     <div class="boton-container" id="botonContainer">
-                        <button class="alimentacion-boton" id="alimentacionBoton">Comenza ahora!</button>
+                        <button class="alimentacion-boton" id="alimentacionBoton"><a href="alimentacion.html">Comenza ahora!</a></button>
                     </div>
                 </div>
             </section>
